--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "express": "^4.13.3",
     "fs": "0.0.2",
+    "nconf": "^0.10.0",
+    "particle-api-js": "^7.0.1",
     "socket.io": "^1.4.4"
   },
   "devDependencies": {
